update CMakeLists.txt: cache BUILD_TESSERACT variable and remove message

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,7 +81,7 @@ IF(NOT BUILD_TESSERACT)
   FIND_PACKAGE(Tesseract QUIET)
   #if Tesseract is found, Tesseract_TESSDATA_PARENT_DIR should be set
   IF(NOT Tesseract_FOUND)
-    SET(BUILD_TESSERACT ON)
+    SET(BUILD_TESSERACT ON CACHE STRING "Build Leptonica/Tesseract from sources." FORCE)
   ENDIF(NOT Tesseract_FOUND)
 ENDIF(NOT BUILD_TESSERACT)
 
@@ -276,7 +276,7 @@ SET(DocCreator_LIBRARIES DocCreatorFramework)
 
 SET(CATCH_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/thirdparty/catch)
 
-MESSAGE(CATCH_INCLUDE_DIRS=${CATCH_INCLUDE_DIRS})
+#MESSAGE(CATCH_INCLUDE_DIRS=${CATCH_INCLUDE_DIRS})
 
 SET(SOFTWARE_PATH ${PROJECT_SOURCE_DIR}/software)
 
