--- a/tests/Degradations/CMakeLists.txt
+++ b/tests/Degradations/CMakeLists.txt
@@ -1,16 +1,27 @@
 
+
+SET(STAINIMAGES_DATA_SRC_DIRECTORY ${CMAKE_SOURCE_DIR}/data/Image/stainImages/images)
+SET(PHANTOMPATTERNS_DATA_SRC_DIRECTORY ${CMAKE_SOURCE_DIR}/data/Image/stainImages/images)
+SET(BLEEDTHROUGH_TEST_IMAGES_SRC_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/testBleedThroughData)
+configure_file(paths.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/paths.hpp @ONLY)
+
+
+
 SET(TESTS_DEGRADATIONS_SRC
-  testHoleDegradation
+  testBleedThrough
   testBlurDegradation
-  testShadowBinding
-  testPhantomCharacter
+  testCharactersDegradation
+  testHoleDegradation
   testGradientDomainDegradation
+  testPhantomCharacter
+  testShadowBinding
   )
 
 SET(LIBS  ${QT_LIBRARIES} ${DocCreator_LIBRARIES} ${OpenCV_LIBS})
 
 include_directories(${FRAMEWORK_INCLUDE_DIRS})
 include_directories(${CATCH_INCLUDE_DIRS})
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 MESSAGE(CATCH_INCLUDE_DIRS=${CATCH_INCLUDE_DIRS})
 
