Remove GrayscaleCharsDegradationModel dependency on Qt in framework.

--- a/software/DocCreator/CMakeLists.txt
+++ b/software/DocCreator/CMakeLists.txt
@@ -25,6 +25,7 @@ SET(
   src/Degradations/BlurFilterQ.hpp
   src/Degradations/DocumentDegradation.hpp
   src/Degradations/GradientDomainDegradationQ.hpp
+  src/Degradations/GrayCharacterDegradationModelQ.cpp
   src/Degradations/HoleDegradationQ.hpp
   src/Degradations/PhantomCharacterQ.hpp
   src/Degradations/ShadowBindingQ.hpp
@@ -35,6 +36,7 @@ SET(
   src/Degradations/BleedThroughQ.cpp
   src/Degradations/BlurFilterQ.cpp
   src/Degradations/GradientDomainDegradationQ.cpp
+  src/Degradations/GrayCharacterDegradationModelQ.cpp
   src/Degradations/HoleDegradationQ.cpp
   src/Degradations/PhantomCharacterQ.cpp
   src/Degradations/ShadowBindingQ.cpp
@@ -389,9 +391,9 @@ IF(BUILD_OTHER_PROGS)
   
   SET(SOURCES src/testBlurFilter.cpp src/Degradations/BlurFilterQ.cpp)
   #src/Degradations/BlurFilterDialog.cpp src/Degradations/BlurFilterDialog.hpp)
-  #SET(MY_UI_FILES src/Degradations/BlurFilterDialog.ui) 
+  #SET(MY_UI_FILES src/Degradations/BlurFilterDialog.ui)
   #QTX_WRAP_UI(MY_UI ${MY_UI_FILES})
-  SET(MY_MOC_FILES src/Degradations/BlurFilterQ.hpp )
+  SET(MY_MOC_FILES src/Degradations/BlurFilterQ.hpp src/Degradations/DocumentDegradation.hpp )
   QTX_WRAP_CPP(MY_MOC ${MY_MOC_FILES})
   ADD_EXECUTABLE(testBlurFilter ${SOURCES} ${MY_MOC} ${MY_UI})
   TARGET_LINK_LIBRARIES(testBlurFilter ${EXTRA_LIBS})
@@ -401,7 +403,7 @@ IF(BUILD_OTHER_PROGS)
 
 
   SET(SHADOW_SOURCES src/testShadowBinding.cpp src/Degradations/ShadowBindingQ.cpp)
-  SET(SHADOW_MOC_FILES  src/Degradations/ShadowBindingQ.hpp )
+  SET(SHADOW_MOC_FILES  src/Degradations/ShadowBindingQ.hpp src/Degradations/DocumentDegradation.hpp )
   QTX_WRAP_CPP(SHADOW_MOC ${SHADOW_MOC_FILES})
   ADD_EXECUTABLE(testShadow ${SHADOW_SOURCES} ${SHADOW_MOC})
   TARGET_LINK_LIBRARIES(testShadow ${EXTRA_LIBS})
@@ -411,7 +413,7 @@ IF(BUILD_OTHER_PROGS)
 
 
   SET(HOLE_SOURCES src/testHoleDegradation.cpp src/Degradations/HoleDegradationQ.cpp)
-  SET(HOLE_MOC_FILES src/Degradations/HoleDegradationQ.hpp )
+  SET(HOLE_MOC_FILES src/Degradations/HoleDegradationQ.hpp src/Degradations/DocumentDegradation.hpp )
   QTX_WRAP_CPP(HOLE_MOC ${HOLE_MOC_FILES})
   ADD_EXECUTABLE(testHole ${HOLE_SOURCES} ${HOLE_MOC})
   TARGET_LINK_LIBRARIES(testHole ${EXTRA_LIBS})
