--- a/tests/Degradations/CMakeLists.txt
+++ b/tests/Degradations/CMakeLists.txt
@@ -23,7 +23,7 @@ include_directories(${FRAMEWORK_INCLUDE_DIRS})
 include_directories(${CATCH_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-MESSAGE(CATCH_INCLUDE_DIRS=${CATCH_INCLUDE_DIRS})
+#MESSAGE(CATCH_INCLUDE_DIRS=${CATCH_INCLUDE_DIRS})
 
 
 FOREACH(FILE ${TESTS_DEGRADATIONS_SRC})
