--- a/software/DocCreator/CMakeLists.txt
+++ b/software/DocCreator/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 2.8.12)
 
+# Honor visibility properties for all target types. [Policy introduced in cmake 3.3]
+IF(POLICY CMP0063)
+  CMAKE_POLICY(SET CMP0063 NEW)
+ENDIF(POLICY CMP0063)
+
 PROJECT(DocCreatorSoftware)
 SET( CMAKE_COLOR_MAKEFILE ON )
 SET( CMAKE_VERBOSE_MAKEFILE ON )
