add Degradator installation

--- a/software/DocCreator/src/Degradator/CMakeLists.txt
+++ b/software/DocCreator/src/Degradator/CMakeLists.txt
@@ -34,3 +34,11 @@ SET_TARGET_PROPERTIES(${PROGNAME} PROPERTIES INSTALL_RPATH "@loader_path/../lib"
 set_property(TARGET ${PROGNAME} PROPERTY CXX_STANDARD 11)
 set_property(TARGET ${PROGNAME} PROPERTY CXX_STANDARD_REQUIRED ON)
 
+
+IF(UNIX)
+  install(TARGETS ${PROGNAME} RUNTIME DESTINATION bin)
+ENDIF(UNIX)
+IF(WIN32)
+  INSTALL(TARGETS ${PROGNAME} RUNTIME DESTINATION programs COMPONENT applications)
+ENDIF(WIN32)
+
