checkEqual() should also work on OpenCV 2.4.x

--- a/tests/Degradations/CMakeLists.txt
+++ b/tests/Degradations/CMakeLists.txt
@@ -8,6 +8,7 @@ configure_file(paths.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/paths.hpp @ONLY)
 
 
 SET(TESTS_DEGRADATIONS_SRC
+  testCommon
   testBleedThrough
   testBlurDegradation
   testCharactersDegradation
