CMake: replace include_directories() by target_include_directories() directives

--- a/libs/Lipsum4Qt/CMakeLists.txt
+++ b/libs/Lipsum4Qt/CMakeLists.txt
@@ -1,8 +1,6 @@
 
 SET( LIB_NAME Lipsum4Qt )
 
-INCLUDE_DIRECTORIES(src)
-
 
 file(
   GLOB_RECURSE
@@ -37,9 +35,6 @@ QTX_ADD_RESOURCES(RCS ${Lipsum4Qt_resources} )
 #QTX_WRAP_UI(UI ${Lipsum4Qt_ui})
 QTX_WRAP_CPP(MOC ${Lipsum4Qt_headers})
 
-INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )
-INCLUDE_DIRECTORIES( ./src )
-INCLUDE_DIRECTORIES(${QT_QTCORE_INCLUDE_DIR} )
 
 SET(EXTRA_LIBS  ${QT_LIBRARIES})
 
@@ -82,8 +77,9 @@ ENDIF()
 #       #COMMAND cp  application.ini ${CMAKE_CURRENT_BINARY_DIR}/${PROGNAME}.app/Contents/Resources
 #     #)
 # ENDIF( APPLE )
-
 ADD_LIBRARY(${LIB_NAME} STATIC ${Lipsum4Qt_sources}  ${MOC} ${RCS} ${UI} ${Lipsum4Qt_headers})
+TARGET_INCLUDE_DIRECTORIES(${LIB_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src> ${QT_QTCORE_INCLUDE_DIR} )
+
 
 TARGET_LINK_LIBRARIES(${LIB_NAME} ${QT_LIBRARIES})
 
