--- a/software/DocCreator/CMakeLists.txt
+++ b/software/DocCreator/CMakeLists.txt
@@ -21,13 +21,7 @@ IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU"
 ENDIF()
 
 
-
-include_directories(${LIPSUM4QT_INCLUDE_DIRS})
-include_directories(${FRAMEWORK_INCLUDE_DIRS})
-
 #INCLUDE( ${QT_USE_FILE} )
-
-#INCLUDE_DIRECTORIES(
 
 SET(
   DocCreatorQ_headers
@@ -51,7 +45,6 @@ SET(
   src/Degradations/PhantomCharacterQ.cpp
   src/Degradations/ShadowBindingQ.cpp
 )
-
 
 SET(
   DocCreator_headers
@@ -289,13 +282,6 @@ QTX_WRAP_CPP(MOC ${DocCreator_headers})
 
 ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/Degradations/Distortion3DModel)
 
-#INCLUDE_DIRECTORIES("/usr/local/Cellar/tesseract/3.04.01_1/include/")
-INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )
-INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} )
-INCLUDE_DIRECTORIES( src )
-
-INCLUDE_DIRECTORIES( ${DOC3D_INCLUDE_DIRS} )
-
 
 SET(EXTRA_LIBS ${QT_LIBRARIES} ${Lipsum4Qt_LIBRARIES} ${DocCreator_LIBRARIES} ${OpenCV_LIBS} ${DOC3D_LIBRARIES} ${Tesseract_LIBRARIES})
 
@@ -320,9 +306,11 @@ SET(EXTRA_LIBS ${QT_LIBRARIES} ${Lipsum4Qt_LIBRARIES} ${DocCreator_LIBRARIES} ${
 
 
 ADD_LIBRARY(${LIBNAME} STATIC ${DocCreatorQ_sources} ${DocCreatorQ_headers} ${MOC_LIB})
+TARGET_INCLUDE_DIRECTORIES(${LIBNAME} PUBLIC ${FRAMEWORK_INCLUDE_DIRS} $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>)
 TARGET_LINK_LIBRARIES(${LIBNAME} ${EXTRA_LIBS})
 
 ADD_EXECUTABLE(${PROGNAME} ${DocCreator_sources} ${DocCreator_headers} ${MOC} ${RCS} ${UI} ${WIN_RESOURCE_FILE})
+TARGET_INCLUDE_DIRECTORIES(${PROGNAME} PRIVATE ${FRAMEWORK_INCLUDE_DIRS} ${DOC3D_INCLUDE_DIRS} $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src> ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR} )
 SET_TARGET_PROPERTIES(${PROGNAME} PROPERTIES INSTALL_RPATH "${PROG_RPATH}")
 
 
