--- a/software/DocCreator/src/Degradations/Distortion3DModel/CMakeLists.txt
+++ b/software/DocCreator/src/Degradations/Distortion3DModel/CMakeLists.txt
@@ -27,9 +27,9 @@ SET(CMAKE_MACOSX_RPATH 1)
 
 #glad library
 IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-  include_directories(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/glad/include)
   file(GLOB_RECURSE glad_SRCS thirdparty/glad/src/*.c)
   ADD_LIBRARY(glad STATIC ${glad_SRCS} ${glad_HDRS})
+  TARGET_INCLUDE_DIRECTORIES(glad PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/glad/include)
   SET_TARGET_PROPERTIES(glad PROPERTIES COMPILE_FLAGS "-fPIC")
   #Build as static library to avoid visibility problems 
   SET(GLAD_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/glad/include)
@@ -38,10 +38,10 @@ IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 ENDIF()
 
 #Surface_mesh library
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty)
 file(GLOB_RECURSE surface_mesh_SRCS thirdparty/surface_mesh/*.cpp)
 #file(GLOB_RECURSE surface_mesh_HDRS thirdparty/surface_mesh/*.h)
 ADD_LIBRARY(surface_mesh STATIC ${surface_mesh_SRCS} ${surface_mesh_HDRS})
+TARGET_INCLUDE_DIRECTORIES(surface_mesh PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty)
 SET_TARGET_PROPERTIES(surface_mesh PROPERTIES COMPILE_FLAGS "-fPIC")
 #Build as static library to avoid visibility problems 
 
@@ -165,11 +165,6 @@ QTX_WRAP_CPP(DOC3D_MOC_SOURCES ${DOC3D_HEADERS})
 
 SET(SRCS ${DOC3D_HEADERS}  ${DOC3D_SOURCES} ${DOC3D_MOC_SOURCES} )
 
-#INCLUDE_DIRECTORIES("${QT_QTCORE_INCLUDE_DIR};${QT_QTGUI_INCLUDE_DIR};${QT_QTOPENGL_INCLUDE_DIR};${OPENGL_INCLUDE_DIR};${GLEW_INCLUDE_DIRS}")
-
-#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty)
-#INCLUDE_DIRECTORIES(${LZHAM_INCLUDE_DIR})
-#INCLUDE_DIRECTORIES(${EIGEN_INCLUDE_DIR})
 
 
 SET(DOC3D_INCLUDE_DIRS_LOCAL "${QT_QTCORE_INCLUDE_DIR};${QT_QTGUI_INCLUDE_DIR};${QT_QTOPENGL_INCLUDE_DIR};${OPENGL_INCLUDE_DIR};${GLAD_INCLUDE_DIR};${CMAKE_CURRENT_SOURCE_DIR}/thirdparty;${CMAKE_CURRENT_SOURCE_DIR};${CMAKE_CURRENT_SOURCE_DIR}/src;${CMAKE_CURRENT_BINARY_DIR}/src;;${CMAKE_CURRENT_BINARY_DIR}/../..;${LZHAM_INCLUDE_DIR};${EIGEN_INCLUDE_DIR}")
@@ -196,9 +191,9 @@ SET(DOC3D_AUX_LIBRARIES "${QT_QTMAIN_LIBRARY};${QT_LIBRARIES};${OPENGL_LIBRARIES
 #As CMAKE_MACOSX_RPATH is defined to 1,
 # Cmake  will automatically add an RPATH to this executable which is the absolute location of libDocCreator in the build tree.
 
-INCLUDE_DIRECTORIES(${DOC3D_INCLUDE_DIRS_LOCAL})
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC  ${SRCS})
+TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${DOC3D_INCLUDE_DIRS_LOCAL})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${DOC3D_AUX_LIBRARIES})
 
 #C++11 (for all executables)
@@ -233,18 +228,19 @@ IF(BUILD_OTHER_PROGS_3D)
   #SET_PROPERTY(TARGET testMeshAdjacentTriangles PROPERTY CXX_STANDARD 11)
   #SET_PROPERTY(TARGET testMeshAdjacentTriangles PROPERTY CXX_STANDARD_REQUIRED ON)
 
-  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
-
   ADD_EXECUTABLE(TestDoc3D WIN32 MACOSX_BUNDLE  ./test/testMeshWindow.cpp  ${SRCS})
+  TARGET_INCLUDE_DIRECTORIES(TestDoc3D PRIVATE ${DOC3D_INCLUDE_DIRS_LOCAL} ${CMAKE_CURRENT_SOURCE_DIR}/src)
   TARGET_LINK_LIBRARIES(TestDoc3D ${DOC3D_LIBRARIES_LOCAL})
   SET_TARGET_PROPERTIES(TestDoc3D PROPERTIES COMPILE_FLAGS "${QTX_EXECUTABLE_COMPILE_FLAGS}")
   #SET_PROPERTY(TARGET TestDoc3D PROPERTY CXX_STANDARD 11)
   #SET_PROPERTY(TARGET TestDoc3D PROPERTY CXX_STANDARD_REQUIRED ON)
 
   ADD_EXECUTABLE(convertBRSOBJ WIN32 MACOSX_BUNDLE  src/convertBRSOBJ.cpp  ${SRCS})
+  TARGET_INCLUDE_DIRECTORIES(convertBRSOBJ PRIVATE ${DOC3D_INCLUDE_DIRS_LOCAL} ${CMAKE_CURRENT_SOURCE_DIR}/src)
   TARGET_LINK_LIBRARIES(convertBRSOBJ ${DOC3D_LIBRARIES_LOCAL})
 
   ADD_EXECUTABLE(removeTexCoords WIN32 MACOSX_BUNDLE src/removeTexCoords.cpp ${SRCS})
+  TARGET_INCLUDE_DIRECTORIES(removeTexCoords PRIVATE ${DOC3D_INCLUDE_DIRS_LOCAL} ${CMAKE_CURRENT_SOURCE_DIR}/src)
   TARGET_LINK_LIBRARIES(removeTexCoords ${DOC3D_LIBRARIES_LOCAL})
   #SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "${QTX_EXECUTABLE_COMPILE_FLAGS}")
   #SET_PROPERTY(TARGET removeTexCoords PROPERTY CXX_STANDARD 11)
