--- a/software/DocCreator/src/Degradator/CMakeLists.txt
+++ b/software/DocCreator/src/Degradator/CMakeLists.txt
@@ -9,9 +9,6 @@ PROJECT(DocCreatorDegradator)
 SET( CMAKE_COLOR_MAKEFILE ON )
 SET( CMAKE_VERBOSE_MAKEFILE ON )
 
-include_directories(${LIPSUM4QT_INCLUDE_DIRS})
-include_directories(${FRAMEWORK_INCLUDE_DIRS})
-
 configure_file(paths.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/paths.hpp @ONLY)
 
 SET(sources
@@ -23,7 +20,10 @@ SET( PROGNAME DocCreatorDegradator )
 SET(EXTRA_LIBS  ${QT_LIBRARIES} ${Lipsum4Qt_LIBRARIES} ${DocCreator_LIBRARIES} ${OpenCV_LIBS} ${LIBNAME})
 
 ADD_EXECUTABLE(${PROGNAME} ${sources} )
-TARGET_INCLUDE_DIRECTORIES(${PROGNAME} PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+TARGET_INCLUDE_DIRECTORIES(${PROGNAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR}
+				       ${LIPSUM4QT_INCLUDE_DIRS} ${FRAMEWORK_INCLUDE_DIRS}
+				       ${DOC3D_INCLUDE_DIRS}
+)
 TARGET_LINK_LIBRARIES(${PROGNAME} ${EXTRA_LIBS})
 
 # the install RPATH for bar to find foo in the install tree.
