--- a/software/DrawCCs/CMakeLists.txt
+++ b/software/DrawCCs/CMakeLists.txt
@@ -9,8 +9,6 @@ PROJECT(GrayscaleDegradator)
 SET( CMAKE_COLOR_MAKEFILE ON )
 SET( CMAKE_VERBOSE_MAKEFILE ON )
 
-include_directories(${LIPSUM4QT_INCLUDE_DIRS})
-include_directories(${FRAMEWORK_INCLUDE_DIRS})
 
 
 SET(sources
@@ -22,6 +20,7 @@ SET( PROGNAME DrawCCs )
 SET(EXTRA_LIBS  ${QT_LIBRARIES} ${Lipsum4Qt_LIBRARIES} ${DocCreator_LIBRARIES} ${OpenCV_LIBS})
 
 ADD_EXECUTABLE(${PROGNAME} ${sources} )
+TARGET_INCLUDE_DIRECTORIES(${PROGNAME} PRIVATE ${LIPSUM4QT_INCLUDE_DIRS} ${FRAMEWORK_INCLUDE_DIRS})
 TARGET_LINK_LIBRARIES(${PROGNAME} ${EXTRA_LIBS})
 
 # the install RPATH for bar to find foo in the install tree.
