cmake: remove useless dependencies

--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -41,6 +41,7 @@ FILE(
 ADD_LIBRARY(DocCreatorDegradations STATIC ${Degradations_sources} ${Degradations_headers})
 TARGET_INCLUDE_DIRECTORIES(DocCreatorDegradations PUBLIC src) #just for framework_global.h
 TARGET_LINK_LIBRARIES(DocCreatorDegradations ${ThirdParty_LIBS})
+SET_TARGET_PROPERTIES(DocCreatorDegradations PROPERTIES POSITION_INDEPENDENT_CODE ON) #ugly #for wrapper
 
 
 
